--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/jetstream": "^1.6",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "league/html-to-markdown": "^5.0",
         "livewire/livewire": "^2.0"
     },
     "require-dev": {
