feat: adiciona rotas, eventos e funcionalidades básicas do mural

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "livewire/livewire": "^2.0"
+        "livewire/livewire": "^2.0",
+        "mydnic/laravel-subscribers": "^1.7"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -64,6 +65,7 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "post-update-cmd": "Google\\Task\\Composer::cleanup"
     }
 }
