--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
         "bootstrap": "^4.6.0",
         "cross-env": "^7.0",
         "jquery": "^3.6",
-        "laravel-mix": "^6.0.25",
+        "laravel-mix": "^6.0.27",
         "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
-        "postcss": "^8.3.5",
+        "postcss": "^8.3.6",
         "postcss-import": "^12.0.1",
-        "resolve-url-loader": "^3.1.3",
-        "sass": "^1.32.11",
+        "resolve-url-loader": "^3.1.4",
+        "sass": "^1.36.0",
         "sass-loader": "^11.0.1",
-        "tailwindcss": "^1.9.6",
-        "vue-template-compiler": "^2.6.14"
+        "tailwindcss": "^2.1.4"
     },
     "dependencies": {
-        "fsevents": "^2.3.2",
-        "materialize": "^1.0.0",
-        "materialize-css": "^1.0.0-rc.2",
-        "mix": "0.0.1"
+        "daisyui": "^1.3.5",
+        "filepond": "^4.28.2",
+        "filepond-plugin-image-preview": "^4.6.7",
+        "materialize-css": "^1.0.0",
+        "moment": "^2.29.1"
     }
 }
