--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "daisyui": "^1.3.5",
         "filepond": "^4.28.2",
         "filepond-plugin-image-preview": "^4.6.7",
+        "html-to-image": "^1.7.0",
         "materialize-css": "^1.0.0",
         "moment": "^2.29.1"
     }
