--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "tailwindcss": "^2.1.4"
     },
     "dependencies": {
+        "animated_gif": "^1.0.2",
         "daisyui": "^1.3.5",
         "filepond": "^4.28.2",
         "filepond-plugin-image-preview": "^4.6.7",
+        "html-to-image": "^1.7.0",
         "materialize-css": "^1.0.0",
         "moment": "^2.29.1"
     }
