Add disk in Filesystem

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 
+PATH_TO_STORE_SITES=/home/guilherme/Documents/Sites/
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=database
