--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "livewire/livewire": "^2.0",
-        "mydnic/laravel-subscribers": "^1.7"
+        "marksitko/laravel-unsplash": "^1.1",
+        "mydnic/laravel-subscribers": "^1.7",
+        "paquettg/php-html-parser": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
