Feat: limita tentativas de login

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 UNSPLASH_ACCESS_KEY=
+
+LOGIN_ATTEMPTS=5
+TIMEOUT_LOGIN=30
