Add Google Auth code to .env.example

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 
+GOOGLE_VERIFICATION_CODE=
 PATH_TO_STORE_SITES=/home/Seu_Usuario/Documents/Sites/
 
 BROADCAST_DRIVER=log
