--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_ID=2
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -51,3 +52,6 @@ UNSPLASH_ACCESS_KEY=
 
 LOGIN_ATTEMPTS=5
 TIMEOUT_LOGIN=30
+
+API_URL=http://localhost:8002/
+
